# zkm

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  RELAY_LOG.md  REVIEW_ME.md  ROADMAP.archive.md  ROADMAP.md  TODO.archive.md  TODO.md  pyproject.toml  zkm-init.sh
.github/workflows/: ci.yml  release.yml
contrib/: expand_benchmark.py  install-autotag-hooks.sh  llm_benchmark.py
contrib/hooks/: post-commit-autotag.sh
contrib/systemd/: zkm-embed.service  zkm-embed.timer
docs/: concurrent-runs.md  embed-rebuild-500-investigation.md  entity-model.md  field-test-bge-m3.md  hybrid-search.md  install.md  messaging-spec.md  ner.md  object-storage.md  phase1-design.md  phase1-done.md  phase2-plan.md  plugin-spec.md  restore.md  temporal-queries.md
docs/meeting-notes/: 2026-05-07-object-storage.md  2026-05-08-1913-sigusr1-status.md  2026-05-08-2101-encoding-audit.md  2026-05-08-2254-privacy-audit.md  2026-05-08-2318-tagging-cadence.md  2026-05-08-doc-chunking.md  2026-05-08-information-flow.md  2026-05-08-mbsync-hook.md  2026-05-08-next-plugins.md  2026-05-08-repo-reorg.md  2026-05-10-1148-entity-extraction.md  2026-05-10-1628-n9a-value-normalization.md  2026-05-10-1640-n9b-email-header-stoplist.md  2026-05-10-2142-n9b-scrub-cli.md  2026-05-11-0946-ner-next-after-n9b.md  2026-05-11-1401-plugin-name-prefix.md  2026-05-11-1506-n10-n11-docs-bundle.md  2026-05-11-1531-ner-tangible-results.md  2026-05-11-2144-n9d-alpha-gliner-ab.md  2026-05-11-2218-n9d-n9e-warrant-check.md  (+58 more)
features/: cli-journeys.feature
scripts/: relock-plugins.sh  seed_dev_store.py
tests/: conftest.py  test_amendments.py  test_amendments_entity_retract.py  test_amendments_retract.py  test_atomic.py  test_bdd_cli_journeys.py  test_canonical.py  test_cas.py  test_cli_amender_skip_prefixes.py  test_cli_amenders.py  test_cli_convert_cas_staging.py  test_completion.py  test_config.py  test_conformance.py  test_conformance_scalar_registry.py  test_conformance_url_sha256.py  test_corpus.py  test_devcheck.py  test_doctor_amendment_queue.py  test_doctor_entities.py  test_embed.py  test_entity_search.py  test_expand.py  test_extraction_cache.py  test_fetch.py  test_gamemode_guard.py  test_hashing.py  test_hygiene.py  test_inbox.py  test_index.py  test_index_annex_drop.py  test_index_toctou.py  test_init.py  test_locate.py  test_messaging_reemit.py  test_needs_auth_review_box.py  test_pathological.py  test_pdftext.py  test_plugin.py  test_query.py  (+9 more)
(+56 files in other folders)
