[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zkm"
version = "0.4.0"
description = "ze knowledge manager — personal knowledge management CLI"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "numpy>=1.26",
    "python-frontmatter>=1.1",
    "rank-bm25>=0.2",
    "snowballstemmer>=2.2",
    "tqdm>=4.66",
]

[project.scripts]
zkm = "zkm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zkm"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "exifread>=3.5.1",
    "pytest>=8.1",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
