[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zkm"
version = "0.7.1"
description = "ze knowledge manager — personal knowledge management CLI"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Tobias Kienzler", email = "zommuter@googlemail.com"}]
keywords = ["knowledge-management", "markdown", "personal-data", "bm25", "embeddings", "cli"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "numpy>=1.26",
    "python-frontmatter>=1.1",
    "rank-bm25>=0.2",
    "snowballstemmer>=2.2",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/zommuter/zkm"
Repository = "https://github.com/zommuter/zkm"
Issues = "https://github.com/zommuter/zkm/issues"

[project.scripts]
zkm = "zkm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zkm"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "exifread>=3.5.1",
    "pytest>=8.1",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
